# api

./: .env.example  .gitignore  Cargo.toml  README.md  renovate.json
migrations/2023-09-14-154458_create_table_users/: up.sql
migrations/2024-05-21-154915_create_uuid_extension/: down.sql  up.sql
migrations/2024-05-21-154926_create_users_table/: up.sql
migrations/2024-05-21-154932_create_user_passwords_table/: down.sql  up.sql
src/: main.rs
src/app/: state.rs
src/controllers/: auth.rs  user.rs
src/db/: actor.rs  mod.rs  schema.rs  utils.rs
src/messages/: auth.rs  user.rs
src/models/: mod.rs  user.rs  user_password.rs
src/services/: auth.rs  user.rs
