[package]
name = "api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-web = "4.5.1"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.1.5", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
