[package]
name = "api"
version = "0.0.1"
edition = "2021"

description = "API for my apps."
repository = "https://github.com/rafiandria23/api"
authors = ["Adam Rafiandri"]
license = "MIT"

[dependencies]
actix = "0.13.3"
actix-web = "4.5.1"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.1.6", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
futures = "0.3.30"
jwt = "0.16.0"
log = "0.4.21"
serde = { version = "1.0.200", features = ["derive"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
